Fri Apr 23 14:52:14 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (stmt, arg, aref_args): should not make sole splat into
	  array, in aref_args other than aref with op_asgn.

Fri Apr 23 14:14:38 2004  Tanaka Akira  <akr@m17n.org>

	* lib/resolv.rb: don't use Regexp#source to embed regexps.
	  [ruby-dev:23432]

Thu Apr 22 18:25:10 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk, ext/extmk.rb: make ext and .ext get removed by distclean.

Thu Apr 22 10:07:01 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* */Makefile.sub (distclean-local): should remove $(RBCONFIG).

Thu Apr 22 04:17:57 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_mod_define_method): allow binding methods to modules.
	  [ruby-dev:23410]

	* parse.y (aref_args): should pass expanded list.  [ruby-core:02793]

Wed Apr 21 23:04:42 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/rinda.rb, test/rinda/test_rinda.rb: check Hash tuple size.

Wed Apr 21 20:05:00 2004  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (URI::HTTP#proxy_open): set Host: field explicitly.
	  [ruby-list:39542]

Wed Apr 21 18:39:46 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/smtp.rb: merge SMTP-TLS patch.  This patch is
	  contributed by Daniel Hob. [ruby-core:02789]

Wed Apr 21 18:23:45 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/smtp.rb: change coding style: def m( a ) -> def m(a).

Wed Apr 21 18:01:47 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/pop.rb: do not use class variables.

	* lib/net/pop.rb (do_start): ensure to clean up connection when
	  authentication failed.

Wed Apr 21 17:23:59 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (HTTP#connect): CONNECT must precede SSL connect.
	  [ruby-dev:23379]

	* lib/net/http.rb (HTTP.new): class variables are not inherited
	  now.

Wed Apr 21 15:56:43 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/ui/console/testrunner.rb (test_started): restore $0